[package]
name = "lettcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","iphlpapi","iptypes","winerror","tlhelp32","handleapi","winreg"] }
regex = {version="1.10.2"}
wmi = "0.13.0"